parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMA
    DOT
    ELSE
    FLOAT
    IF
    INT
    LEFT_BRACKET
    OUT
    RIGHT_BRACKET
    SYSTEM

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement
Rule 3     statements -> statements statement
Rule 4     statement -> expression SEMICOLON
Rule 5     statement -> for_loop
Rule 6     statement -> println_statement
Rule 7     statement -> nombre_assignment
Rule 8     statement -> while_loop
Rule 9     nombre_assignment -> NOMBRE EQUALS KEVIN
Rule 10    while_loop -> WHILE LPAREN condition RPAREN LEFT_BRACE statements RIGHT_BRACE
Rule 11    for_loop -> FOR LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
Rule 12    println_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 13    println_statement -> PRINT LPAREN STRING RPAREN SEMICOLON
Rule 14    assignment -> ID EQUALS expression
Rule 15    condition -> expression
Rule 16    expression -> expression PLUS expression
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> expression TIMES expression
Rule 19    expression -> expression DIVIDE expression
Rule 20    expression -> LPAREN expression RPAREN
Rule 21    expression -> ID
Rule 22    expression -> NUMBER
Rule 23    expression -> INCREMENT
Rule 24    expression -> STRING
Rule 25    expression -> expression LESS_THAN expression
Rule 26    expression -> expression GREATER_THAN expression
Rule 27    expression -> expression LESS_THAN_EQUAL expression
Rule 28    expression -> expression GREATER_THAN_EQUAL expression
Rule 29    expression -> expression EQUAL_EQUAL expression
Rule 30    expression -> expression NOT_EQUAL expression
Rule 31    increment -> ID INCREMENT

Terminals, with rules where they appear

COLON                : 
COMMA                : 
DIVIDE               : 19
DOT                  : 
ELSE                 : 
EQUALS               : 9 14
EQUAL_EQUAL          : 29
FLOAT                : 
FOR                  : 11
GREATER_THAN         : 26
GREATER_THAN_EQUAL   : 28
ID                   : 14 21 31
IF                   : 
INCREMENT            : 23 31
INT                  : 
KEVIN                : 9
LEFT_BRACE           : 10 11
LEFT_BRACKET         : 
LESS_THAN            : 25
LESS_THAN_EQUAL      : 27
LPAREN               : 10 11 12 13 20
MINUS                : 17
NOMBRE               : 9
NOT_EQUAL            : 30
NUMBER               : 22
OUT                  : 
PLUS                 : 16
PRINT                : 12 13
RIGHT_BRACE          : 10 11
RIGHT_BRACKET        : 
RPAREN               : 10 11 12 13 20
SEMICOLON            : 4 11 11 12 13
STRING               : 13 24
SYSTEM               : 
TIMES                : 18
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

assignment           : 11
condition            : 10 11
expression           : 4 12 14 15 16 16 17 17 18 18 19 19 20 25 25 26 26 27 27 28 28 29 29 30 30
for_loop             : 5
increment            : 11
nombre_assignment    : 7
println_statement    : 6
program              : 0
statement            : 2 3
statements           : 1 3 10 11
while_loop           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement
    (3) statements -> . statements statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . for_loop
    (6) statement -> . println_statement
    (7) statement -> . nombre_assignment
    (8) statement -> . while_loop
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression
    (11) for_loop -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
    (12) println_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (13) println_statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (9) nombre_assignment -> . NOMBRE EQUALS KEVIN
    (10) while_loop -> . WHILE LPAREN condition RPAREN LEFT_BRACE statements RIGHT_BRACE

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    NOMBRE          shift and go to state 16
    WHILE           shift and go to state 17

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    for_loop                       shift and go to state 5
    println_statement              shift and go to state 6
    nombre_assignment              shift and go to state 7
    while_loop                     shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (3) statements -> statements . statement
    (4) statement -> . expression SEMICOLON
    (5) statement -> . for_loop
    (6) statement -> . println_statement
    (7) statement -> . nombre_assignment
    (8) statement -> . while_loop
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression
    (11) for_loop -> . FOR LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
    (12) println_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (13) println_statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (9) nombre_assignment -> . NOMBRE EQUALS KEVIN
    (10) while_loop -> . WHILE LPAREN condition RPAREN LEFT_BRACE statements RIGHT_BRACE

    $end            reduce using rule 1 (program -> statements .)
    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13
    FOR             shift and go to state 14
    PRINT           shift and go to state 15
    NOMBRE          shift and go to state 16
    WHILE           shift and go to state 17

    statement                      shift and go to state 18
    expression                     shift and go to state 4
    for_loop                       shift and go to state 5
    println_statement              shift and go to state 6
    nombre_assignment              shift and go to state 7
    while_loop                     shift and go to state 8

state 3

    (2) statements -> statement .

    LPAREN          reduce using rule 2 (statements -> statement .)
    ID              reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    INCREMENT       reduce using rule 2 (statements -> statement .)
    STRING          reduce using rule 2 (statements -> statement .)
    FOR             reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    NOMBRE          reduce using rule 2 (statements -> statement .)
    WHILE           reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)
    RIGHT_BRACE     reduce using rule 2 (statements -> statement .)


state 4

    (4) statement -> expression . SEMICOLON
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . DIVIDE expression
    (25) expression -> expression . LESS_THAN expression
    (26) expression -> expression . GREATER_THAN expression
    (27) expression -> expression . LESS_THAN_EQUAL expression
    (28) expression -> expression . GREATER_THAN_EQUAL expression
    (29) expression -> expression . EQUAL_EQUAL expression
    (30) expression -> expression . NOT_EQUAL expression

    SEMICOLON       shift and go to state 19
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23
    LESS_THAN       shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN_EQUAL shift and go to state 26
    GREATER_THAN_EQUAL shift and go to state 27
    EQUAL_EQUAL     shift and go to state 28
    NOT_EQUAL       shift and go to state 29


state 5

    (5) statement -> for_loop .

    LPAREN          reduce using rule 5 (statement -> for_loop .)
    ID              reduce using rule 5 (statement -> for_loop .)
    NUMBER          reduce using rule 5 (statement -> for_loop .)
    INCREMENT       reduce using rule 5 (statement -> for_loop .)
    STRING          reduce using rule 5 (statement -> for_loop .)
    FOR             reduce using rule 5 (statement -> for_loop .)
    PRINT           reduce using rule 5 (statement -> for_loop .)
    NOMBRE          reduce using rule 5 (statement -> for_loop .)
    WHILE           reduce using rule 5 (statement -> for_loop .)
    $end            reduce using rule 5 (statement -> for_loop .)
    RIGHT_BRACE     reduce using rule 5 (statement -> for_loop .)


state 6

    (6) statement -> println_statement .

    LPAREN          reduce using rule 6 (statement -> println_statement .)
    ID              reduce using rule 6 (statement -> println_statement .)
    NUMBER          reduce using rule 6 (statement -> println_statement .)
    INCREMENT       reduce using rule 6 (statement -> println_statement .)
    STRING          reduce using rule 6 (statement -> println_statement .)
    FOR             reduce using rule 6 (statement -> println_statement .)
    PRINT           reduce using rule 6 (statement -> println_statement .)
    NOMBRE          reduce using rule 6 (statement -> println_statement .)
    WHILE           reduce using rule 6 (statement -> println_statement .)
    $end            reduce using rule 6 (statement -> println_statement .)
    RIGHT_BRACE     reduce using rule 6 (statement -> println_statement .)


state 7

    (7) statement -> nombre_assignment .

    LPAREN          reduce using rule 7 (statement -> nombre_assignment .)
    ID              reduce using rule 7 (statement -> nombre_assignment .)
    NUMBER          reduce using rule 7 (statement -> nombre_assignment .)
    INCREMENT       reduce using rule 7 (statement -> nombre_assignment .)
    STRING          reduce using rule 7 (statement -> nombre_assignment .)
    FOR             reduce using rule 7 (statement -> nombre_assignment .)
    PRINT           reduce using rule 7 (statement -> nombre_assignment .)
    NOMBRE          reduce using rule 7 (statement -> nombre_assignment .)
    WHILE           reduce using rule 7 (statement -> nombre_assignment .)
    $end            reduce using rule 7 (statement -> nombre_assignment .)
    RIGHT_BRACE     reduce using rule 7 (statement -> nombre_assignment .)


state 8

    (8) statement -> while_loop .

    LPAREN          reduce using rule 8 (statement -> while_loop .)
    ID              reduce using rule 8 (statement -> while_loop .)
    NUMBER          reduce using rule 8 (statement -> while_loop .)
    INCREMENT       reduce using rule 8 (statement -> while_loop .)
    STRING          reduce using rule 8 (statement -> while_loop .)
    FOR             reduce using rule 8 (statement -> while_loop .)
    PRINT           reduce using rule 8 (statement -> while_loop .)
    NOMBRE          reduce using rule 8 (statement -> while_loop .)
    WHILE           reduce using rule 8 (statement -> while_loop .)
    $end            reduce using rule 8 (statement -> while_loop .)
    RIGHT_BRACE     reduce using rule 8 (statement -> while_loop .)


state 9

    (20) expression -> LPAREN . expression RPAREN
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 30

state 10

    (21) expression -> ID .

    SEMICOLON       reduce using rule 21 (expression -> ID .)
    PLUS            reduce using rule 21 (expression -> ID .)
    MINUS           reduce using rule 21 (expression -> ID .)
    TIMES           reduce using rule 21 (expression -> ID .)
    DIVIDE          reduce using rule 21 (expression -> ID .)
    LESS_THAN       reduce using rule 21 (expression -> ID .)
    GREATER_THAN    reduce using rule 21 (expression -> ID .)
    LESS_THAN_EQUAL reduce using rule 21 (expression -> ID .)
    GREATER_THAN_EQUAL reduce using rule 21 (expression -> ID .)
    EQUAL_EQUAL     reduce using rule 21 (expression -> ID .)
    NOT_EQUAL       reduce using rule 21 (expression -> ID .)
    RPAREN          reduce using rule 21 (expression -> ID .)


state 11

    (22) expression -> NUMBER .

    SEMICOLON       reduce using rule 22 (expression -> NUMBER .)
    PLUS            reduce using rule 22 (expression -> NUMBER .)
    MINUS           reduce using rule 22 (expression -> NUMBER .)
    TIMES           reduce using rule 22 (expression -> NUMBER .)
    DIVIDE          reduce using rule 22 (expression -> NUMBER .)
    LESS_THAN       reduce using rule 22 (expression -> NUMBER .)
    GREATER_THAN    reduce using rule 22 (expression -> NUMBER .)
    LESS_THAN_EQUAL reduce using rule 22 (expression -> NUMBER .)
    GREATER_THAN_EQUAL reduce using rule 22 (expression -> NUMBER .)
    EQUAL_EQUAL     reduce using rule 22 (expression -> NUMBER .)
    NOT_EQUAL       reduce using rule 22 (expression -> NUMBER .)
    RPAREN          reduce using rule 22 (expression -> NUMBER .)


state 12

    (23) expression -> INCREMENT .

    SEMICOLON       reduce using rule 23 (expression -> INCREMENT .)
    PLUS            reduce using rule 23 (expression -> INCREMENT .)
    MINUS           reduce using rule 23 (expression -> INCREMENT .)
    TIMES           reduce using rule 23 (expression -> INCREMENT .)
    DIVIDE          reduce using rule 23 (expression -> INCREMENT .)
    LESS_THAN       reduce using rule 23 (expression -> INCREMENT .)
    GREATER_THAN    reduce using rule 23 (expression -> INCREMENT .)
    LESS_THAN_EQUAL reduce using rule 23 (expression -> INCREMENT .)
    GREATER_THAN_EQUAL reduce using rule 23 (expression -> INCREMENT .)
    EQUAL_EQUAL     reduce using rule 23 (expression -> INCREMENT .)
    NOT_EQUAL       reduce using rule 23 (expression -> INCREMENT .)
    RPAREN          reduce using rule 23 (expression -> INCREMENT .)


state 13

    (24) expression -> STRING .

    SEMICOLON       reduce using rule 24 (expression -> STRING .)
    PLUS            reduce using rule 24 (expression -> STRING .)
    MINUS           reduce using rule 24 (expression -> STRING .)
    TIMES           reduce using rule 24 (expression -> STRING .)
    DIVIDE          reduce using rule 24 (expression -> STRING .)
    LESS_THAN       reduce using rule 24 (expression -> STRING .)
    GREATER_THAN    reduce using rule 24 (expression -> STRING .)
    LESS_THAN_EQUAL reduce using rule 24 (expression -> STRING .)
    GREATER_THAN_EQUAL reduce using rule 24 (expression -> STRING .)
    EQUAL_EQUAL     reduce using rule 24 (expression -> STRING .)
    NOT_EQUAL       reduce using rule 24 (expression -> STRING .)
    RPAREN          reduce using rule 24 (expression -> STRING .)


state 14

    (11) for_loop -> FOR . LPAREN assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE

    LPAREN          shift and go to state 31


state 15

    (12) println_statement -> PRINT . LPAREN expression RPAREN SEMICOLON
    (13) println_statement -> PRINT . LPAREN STRING RPAREN SEMICOLON

    LPAREN          shift and go to state 32


state 16

    (9) nombre_assignment -> NOMBRE . EQUALS KEVIN

    EQUALS          shift and go to state 33


state 17

    (10) while_loop -> WHILE . LPAREN condition RPAREN LEFT_BRACE statements RIGHT_BRACE

    LPAREN          shift and go to state 34


state 18

    (3) statements -> statements statement .

    LPAREN          reduce using rule 3 (statements -> statements statement .)
    ID              reduce using rule 3 (statements -> statements statement .)
    NUMBER          reduce using rule 3 (statements -> statements statement .)
    INCREMENT       reduce using rule 3 (statements -> statements statement .)
    STRING          reduce using rule 3 (statements -> statements statement .)
    FOR             reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    NOMBRE          reduce using rule 3 (statements -> statements statement .)
    WHILE           reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)
    RIGHT_BRACE     reduce using rule 3 (statements -> statements statement .)


state 19

    (4) statement -> expression SEMICOLON .

    LPAREN          reduce using rule 4 (statement -> expression SEMICOLON .)
    ID              reduce using rule 4 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 4 (statement -> expression SEMICOLON .)
    INCREMENT       reduce using rule 4 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 4 (statement -> expression SEMICOLON .)
    FOR             reduce using rule 4 (statement -> expression SEMICOLON .)
    PRINT           reduce using rule 4 (statement -> expression SEMICOLON .)
    NOMBRE          reduce using rule 4 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 4 (statement -> expression SEMICOLON .)
    $end            reduce using rule 4 (statement -> expression SEMICOLON .)
    RIGHT_BRACE     reduce using rule 4 (statement -> expression SEMICOLON .)


state 20

    (16) expression -> expression PLUS . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 35

state 21

    (17) expression -> expression MINUS . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 36

state 22

    (18) expression -> expression TIMES . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 37

state 23

    (19) expression -> expression DIVIDE . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 38

state 24

    (25) expression -> expression LESS_THAN . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 39

state 25

    (26) expression -> expression GREATER_THAN . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 40

state 26

    (27) expression -> expression LESS_THAN_EQUAL . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 41

state 27

    (28) expression -> expression GREATER_THAN_EQUAL . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 42

state 28

    (29) expression -> expression EQUAL_EQUAL . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 43

state 29

    (30) expression -> expression NOT_EQUAL . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    expression                     shift and go to state 44

state 30

    (20) expression -> LPAREN expression . RPAREN
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . DIVIDE expression
    (25) expression -> expression . LESS_THAN expression
    (26) expression -> expression . GREATER_THAN expression
    (27) expression -> expression . LESS_THAN_EQUAL expression
    (28) expression -> expression . GREATER_THAN_EQUAL expression
    (29) expression -> expression . EQUAL_EQUAL expression
    (30) expression -> expression . NOT_EQUAL expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23
    LESS_THAN       shift and go to state 24
    GREATER_THAN    shift and go to state 25
    LESS_THAN_EQUAL shift and go to state 26
    GREATER_THAN_EQUAL shift and go to state 27
    EQUAL_EQUAL     shift and go to state 28
    NOT_EQUAL       shift and go to state 29


state 31

    (11) for_loop -> FOR LPAREN . assignment SEMICOLON condition SEMICOLON increment RPAREN LEFT_BRACE statements RIGHT_BRACE
    (14) assignment -> . ID EQUALS expression

    ID              shift and go to state 47

    assignment                     shift and go to state 46

state 32

    (12) println_statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (13) println_statement -> PRINT LPAREN . STRING RPAREN SEMICOLON
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    STRING          shift and go to state 49
    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12

    expression                     shift and go to state 48

state 33

    (9) nombre_assignment -> NOMBRE EQUALS . KEVIN

    KEVIN           shift and go to state 50


state 34

    (10) while_loop -> WHILE LPAREN . condition RPAREN LEFT_BRACE statements RIGHT_BRACE
    (15) condition -> . expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . LPAREN expression RPAREN
    (21) expression -> . ID
    (22) expression -> . NUMBER
    (23) expression -> . INCREMENT
    (24) expression -> . STRING
    (25) expression -> . expression LESS_THAN expression
    (26) expression -> . expression GREATER_THAN expression
    (27) expression -> . expression LESS_THAN_EQUAL expression
    (28) expression -> . expression GREATER_THAN_EQUAL expression
    (29) expression -> . expression EQUAL_EQUAL expression
    (30) expression -> . expression NOT_EQUAL expression

    LPAREN          shift and go to state 9
    ID              shift and go to state 10
    NUMBER          shift and go to state 11
    INCREMENT       shift and go to state 12
    STRING          shift and go to state 13

    condition                      shift and go to state 51
    expression                     shift and go to state 52

state 35

    (16) expression -> expression PLUS expression .
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . DIVIDE expression
    (25) expression -> expression . LESS_THAN expression
    (26) expression -> expression . GREATER_THAN expression
    (27) expression -> expression . LESS_THAN_EQUAL expression
    (28) expression -> expression . GREATER_THAN_EQUAL expression
    (29) expression -> expression . EQUAL_EQUAL expression
    (30) expression -> expression . NOT_EQUAL expression
